Tuan's checkin
- Adding controllers.
